[workspace]
members = [".", "examples/*"]
default-members = ["."]

[package]
name = "cargo-image-runner"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "A generic, customizable runner for building and booting kernel/embedded images with Limine, GRUB, QEMU, and more"
repository = "https://github.com/hxyulin/cargo-image-runner"
rust-version = "1.87"
readme = "README.md"
documentation = "https://docs.rs/cargo-image-runner"
keywords = ["kernel", "bootloader", "qemu", "limine", "osdev"]
categories = ["development-tools", "os", "command-line-utilities"]
exclude = [".github/", "CLAUDE.md"]

[features]
default = ["cli", "cargo-metadata", "uefi", "bios", "limine", "iso", "qemu"]

# CLI and metadata
cli = ["dep:clap", "cargo-metadata"]
cargo-metadata = ["dep:cargo_metadata"]

# Boot types
bios = []
uefi = ["dep:ovmf-prebuilt"]

# Bootloaders
limine = ["dep:git2", "dep:reqwest", "dep:tar", "dep:xz2"]
grub = []

# Image formats
iso = ["dep:hadris-iso", "dep:hadris-fat"]
fat = ["dep:fatfs", "dep:fscommon"]

# Runners
qemu = []

# Optional
progress = ["dep:indicatif"]

[[bin]]
name = "cargo-image-runner"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
# Core dependencies
cargo_metadata = { version = "0.18.1", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_plain = "1.0.2"
clap = { version = "4.5.51", features = ["derive"], optional = true }
thiserror = "2.0"
toml = "0.8"

# Optional dependencies
git2 = { version = "0.20", optional = true }
reqwest = { version = "0.13.4", optional = true, features = ["blocking"] }
tar = { version = "0.4.46", optional = true }
xz2 = { version = "0.1.7", optional = true }
hadris-iso = { version = "0.2.1", optional = true }
hadris-fat = { version = "0.3.1", optional = true, features = ["write", "lfn"] }
fatfs = { version = "0.3", optional = true, features = ["std"] }
fscommon = { version = "0.1", optional = true }
ovmf-prebuilt = { version = "0.2.2", optional = true }
indicatif = { version = "0.17", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
